examples/good/05-04-if-else.dog
boolean fun() {
    return true;
}

if (fun()) {
    yeet "W8M8";
} else {
    yeet "H8M4";
}