examples/bad/05-04-if-types-mismatch.dog
string cond() {
    return "vikings ftw";
}

if (cond()) {
    return "oops";
}